--- a/src/app/modules/device-mapping/mapping-request/mapping-request.component.html
+++ b/src/app/modules/device-mapping/mapping-request/mapping-request.component.html
@@ -2,5 +2,5 @@
     mat-icon-button
     (click)="mappingRec()"
     #notificationsOrigin>
-    <mat-icon [svgIcon]="'bx:bx-map-pin'"></mat-icon>
+    <mat-icon> location_on</mat-icon>
 </button>
