--- a/src/app/modules/device-mapping/violations/violations.component.html
+++ b/src/app/modules/device-mapping/violations/violations.component.html
@@ -2,5 +2,5 @@
     mat-icon-button
     (click)="violation()"
     #notificationsOrigin>
-    <mat-icon [svgIcon]="'bi:exclamation-diamond'"></mat-icon>
+    <mat-icon>error</mat-icon>
 </button>
