--- a/src/app/modules/loan/cl-loan-witness/cl-loan-witness.component.html
+++ b/src/app/modules/loan/cl-loan-witness/cl-loan-witness.component.html
@@ -630,7 +630,7 @@
       <div class="kt-form">
         <div class="form-group kt-form__group row">
           <div class="col-lg-12 kt-margin-bottom-20-mobile">
-            <button class="btn btn-primary float-right" (click)="getCheckList()">Refresh Check List</button>
+            <button class="mat-focus-indicator mat-flat-button mat-button-base mat-primary float-right" (click)="getCheckList()">Refresh Check List</button>
           </div>
           <div class="col-lg-12 kt-margin-bottom-20-mobile">
             <div *ngFor="let doc of loanDocumentsCheckList; let i = index;" style="display:inline; margin-right:1%">
@@ -648,8 +648,8 @@
 
         <div class="form-group kt-form__group row">
           <div class="col-lg-12 kt-margin-bottom-20-mobile">
-            <button class="btn btn-primary mr-1p" (click)="saveCheckList()">Save</button>
-            <button class="btn btn-primary mr-1p" (click)="submitLoanApplication()" >Submit</button>
+            <button class="mat-focus-indicator mat-flat-button mat-button-base mat-primary" (click)="saveCheckList()"><mat-icon class="mr-2">save</mat-icon> Save</button>
+            <button class="mat-focus-indicator mat-flat-button mat-button-base mat-primary mx-2" (click)="submitLoanApplication()" ><mat-icon class="mr-2">check_circle</mat-icon> Submit</button>
             <!--<button class="btn btn-primary mr-1p">New Case</button>
             <button class="btn btn-primary mr-1p">Pending List</button>-->
           </div>
