--- a/src/app/modules/loan/cl-purpose/cl-purpose.component.html
+++ b/src/app/modules/loan/cl-purpose/cl-purpose.component.html
@@ -3,30 +3,27 @@
     <div class="kt-portlet__body">
 
       <div class="form-group kt-form__group row">
-        <div class="col-lg-2 kt-margin-bottom-20-mobile">
-          <mat-form-field class="mat-form-field-fluid" appearance="outline">
+        <div class="col-lg-4 col-sm-12">
+          <mat-form-field class="mat-form-field-fluid w-7/12" appearance="outline">
             <mat-label class="customMatLabel">GL Code <strong class="matMandatory">*</strong></mat-label>
             <input matInput placeholder="Enter GL Code" formControlName="GlSubID" appNumberOnly />
             <mat-error *ngIf="hasError('GlSubID', 'required')">GL Code <strong>required</strong></mat-error>
           </mat-form-field>
-        </div>
-
-
-        <div class="col-lg-1 kt-margin-bottom-20-mobile">
-          <button type="button" (click)="GlschemeCropConfiguration()" class="btn btn-primary mt-10p" mat-raised-button color="primary">
+          <button type="button" (click)="GlschemeCropConfiguration()" class=" w-4/12 mx-2 btn btn-primary" mat-raised-button color="primary">
             Get GL Code #
           </button>
         </div>
 
-        <div class="col-lg-3 kt-margin-bottom-20-mobile">
-          <mat-form-field class="mat-form-field-fluid" appearance="outline">
+
+        <div class="col-lg-4 col-sm-12 ">
+          <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
             <mat-label class="customMatLabel">Scheme Code <strong class="matMandatory"></strong></mat-label>
             <input matInput placeholder="Scheme Code" formControlName="SchemeID" appNumberOnly />
             <!--<mat-error *ngIf="hasError('DevAmount', 'required')">GL Code <strong>required</strong></mat-error>-->
           </mat-form-field>
         </div>
-        <div class="col-lg-3 kt-margin-bottom-20-mobile">
-          <mat-form-field class="mat-form-field-fluid" appearance="outline">
+        <div class="col-lg-4 col-sm-12 ">
+          <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
             <mat-label class="customMatLabel">Markup Calc Mode <strong class="matMandatory">*</strong></mat-label>
             <mat-select formControlName="MarkupCalcMode" [disabled]="MarkupCalcReadOnly">
               <mat-option *ngFor="let markup of MarkupCalcMode" [value]="markup.Id">
@@ -36,23 +33,24 @@
             <mat-error *ngIf="hasError('MarkupCalcMode', 'required')">Markup Calc Mode <strong>required</strong></mat-error>
           </mat-form-field>
         </div>
-        <div class="col-lg-3 kt-margin-bottom-20-mobile">
-          <mat-form-field class="mat-form-field-fluid" appearance="outline">
+
+      </div>
+
+      <div class="form-group kt-form__group row">
+        <div class="col-lg-4 col-sm-12 kt-margin-bottom-20-mobile">
+          <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
             <mat-label class="customMatLabel">Crop Code<strong class="matMandatory"></strong></mat-label>
             <input matInput placeholder="Enter Crop Code" formControlName="CropID" appNumberOnly />
           </mat-form-field>
         </div>
-      </div>
-
-      <div class="form-group kt-form__group row">
-        <div class="col-lg-3 kt-margin-bottom-20-mobile">
-          <mat-form-field class="mat-form-field-fluid" appearance="outline">
+        <div class="col-lg-4 col-sm-12 kt-margin-bottom-20-mobile">
+          <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
             <mat-label class="customMatLabel">Cultivated Area(Marla) <strong class="matMandatory"></strong></mat-label>
             <input matInput placeholder="Enter Production Loan Amount" formControlName="CultivatedArea" appNumberOnly />
           </mat-form-field>
         </div>
-        <div class="col-lg-3 kt-margin-bottom-20-mobile">
-          <mat-form-field class="mat-form-field-fluid" appearance="outline">
+        <div class="col-lg-4 col-sm-12 kt-margin-bottom-20-mobile">
+          <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
             <mat-label class="customMatLabel">Make/Capacity <strong class="matMandatory"></strong></mat-label>
             <mat-select formControlName="RequiredItem">
               <mat-option>
@@ -65,14 +63,18 @@
             </mat-select>
           </mat-form-field>
         </div>
-        <div class="col-lg-3 kt-margin-bottom-20-mobile">
-          <mat-form-field class="mat-form-field-fluid" appearance="outline">
+
+      </div>
+
+      <div class="form-group kt-form__group row">
+        <div class="col-lg-4 col-sm-12 kt-margin-bottom-20-mobile">
+          <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
             <mat-label class="customMatLabel">Quantity <strong class="matMandatory"></strong></mat-label>
             <input matInput placeholder="Enter Production Loan Amount" formControlName="Quantity" appNumberOnly />
           </mat-form-field>
         </div>
-        <div class="col-lg-3 kt-margin-bottom-20-mobile">
-          <mat-form-field class="mat-form-field-fluid" appearance="outline">
+        <div class="col-lg-4 col-sm-12 kt-margin-bottom-20-mobile">
+          <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
             <mat-label class="customMatLabel">Facility <strong class="matMandatory"></strong></mat-label>
             <mat-select formControlName="FundNonFund">
               <mat-option *ngFor="let facility of Facility" [value]="facility.Id">
@@ -81,36 +83,18 @@
             </mat-select>
           </mat-form-field>
         </div>
-      </div>
-
-      <div class="form-group kt-form__group row">
-        <div class="col-lg-3 kt-margin-bottom-20-mobile">
-          <mat-form-field class="mat-form-field-fluid" appearance="outline">
+        <div class="col-lg-4 col-sm-12 kt-margin-bottom-20-mobile">
+          <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
             <mat-label class="customMatLabel">Market Price <strong class="matMandatory">*</strong></mat-label>
             <input matInput placeholder="Enter Market Price" formControlName="TotalEstimatedCost" appNumberOnly />
             <mat-error *ngIf="hasError('TotalEstimatedCost', 'required')">Market Price <strong>required</strong></mat-error>
           </mat-form-field>
         </div>
-        <div class="col-lg-3 kt-margin-bottom-20-mobile">
-          <mat-form-field class="mat-form-field-fluid" appearance="outline">
-            <mat-label class="customMatLabel">Equity (Rs.) <strong class="matMandatory"></strong></mat-label>
-            <input matInput placeholder="Enter Market Price" formControlName="AmountInHand" appNumberOnly />
-          </mat-form-field>
-        </div>
-        <div class="col-lg-3">
-          <mat-form-field class="mat-form-field-fluid" appearance="outline">
-            <mat-label class="customMatLabel">Loan Applied (Rs.) <strong class="matMandatory">*</strong></mat-label>
-            <input matInput placeholder="Enter Market Price" formControlName="AmountRequired" appNumberOnly />
-            <mat-error *ngIf="hasError('AmountRequired', 'required')">Loan Applied <strong>required</strong></mat-error>
-          </mat-form-field>
-        </div>
-        <div class="col-lg-3 kt-margin-bottom-20-mobile mt-2">
-          <mat-checkbox class="example-margin" [(ngModel)]="isCheckedEquity" [ngModelOptions]="{standalone: true}">Check Equity</mat-checkbox>
-        </div>
+
       </div>
       <div class="form-group kt-form__group row">
         <div class="col-lg-12 kt-margin-bottom-20-mobile">
-          <mat-form-field class="mat-form-field-fluid" appearance="outline">
+          <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
             <mat-label class="customMatLabel">Remarks <strong class="matMandatory">*</strong></mat-label>
             <!--<input matInput placeholder="Enter Market Price" formControlName="NecessitiesDetail"/>-->
             <textarea matInput placeholder="Enter Market Price" formControlName="NecessitiesDetail"></textarea>
@@ -120,22 +104,40 @@
 
       </div>
       <div class="form-group kt-form__group row">
-        <div class="col-lg-3 kt-margin-bottom-20-mobile">
-          <mat-label class="customMatLabel"><b>Borrower Agreed to Pay Insurance For (Opt) Crops</b><strong class="matMandatory">*</strong></mat-label>
+        <div class="col-lg-4 col-sm-12 kt-margin-bottom-20-mobile">
+          <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
+            <mat-label class="customMatLabel">Equity (Rs.) <strong class="matMandatory"></strong></mat-label>
+            <input matInput placeholder="Enter Market Price" formControlName="AmountInHand" appNumberOnly />
+          </mat-form-field>
+        </div>
+        <div class="col-lg-4 col-sm-12">
+          <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
+            <mat-label class="customMatLabel">Loan Applied (Rs.) <strong class="matMandatory">*</strong></mat-label>
+            <input matInput placeholder="Enter Market Price" formControlName="AmountRequired" appNumberOnly />
+            <mat-error *ngIf="hasError('AmountRequired', 'required')">Loan Applied <strong>required</strong></mat-error>
+          </mat-form-field>
+        </div>
+       </div> 
+        <div class="form-group kt-form__group row">
+        <div class="col-lg-4 col-sm-12 kt-margin-bottom-20-mobile mt-2">
+          <mat-checkbox class="example-margin" [(ngModel)]="isCheckedEquity" [ngModelOptions]="{standalone: true}">Check Equity</mat-checkbox>
+        </div>
+        <div class="col-lg-4 col-sm-12 kt-margin-bottom-20-mobile">
+          <mat-label class="customMatLabel mb-4"><b>Borrower Agreed to Pay Insurance For (Opt) Crops</b><strong class="matMandatory">*</strong></mat-label>
           &nbsp;
-          <mat-radio-group aria-label="Select an option">
+          <mat-radio-group class="mt-4" aria-label="Select an option">
             <mat-radio-button value="1">Agree</mat-radio-button>
-            <mat-radio-button value="2">Not Agree</mat-radio-button>
+            <mat-radio-button class="mx-2" value="2">Not Agree</mat-radio-button>
           </mat-radio-group>
         </div>
       </div>
       <div class="form-group kt-form__group row">
         <div class="col-lg-3 mt-1p">
           <button type="button" class="btn btn-primary" mat-raised-button color="primary" (click)="onSavePurpose()">
-            Save
+            <mat-icon class="mr-2">save</mat-icon> Save
           </button>
-          <button type="button" class="btn btn-outline-brand ml-1p" mat-raised-button color="danger" (click)="onClearSavePurpose()">
-            Clear
+          <button type="button" class="mat-focus-indicator shadow-md btn bg-red-500 text-white rounded-md mx-2 mat-raised-button mat-button-base mat-danger"  color="danger" (click)="onClearSavePurpose()">
+            <mat-icon class="mr-2"> clear_all</mat-icon>Clear
           </button>
         </div>
       </div>
