--- a/src/app/modules/loan/cl-upload-document/cl-upload-document.component.html
+++ b/src/app/modules/loan/cl-upload-document/cl-upload-document.component.html
@@ -79,14 +79,14 @@
   <div class="kt-portlet">
     <div class="kt-portlet__head kt-portlet__head__custom" id="list-header">
       <div class="kt-portlet__head-label">
-        <h5 class="kt-portlet__head-title">Document Information</h5>
+        <h5 class="kt-portlet__head-title text-md">Document Information</h5>
       </div>
     </div>
     <div class="kt-portlet__body">
       <div class="kt-form">
         <div class="form-group kt-form__group row">
-          <div class="col-lg-4 kt-margin-bottom-20-mobile">
-            <mat-form-field class="mat-form-field-fluid" appearance="outline">
+          <div class="col-lg-4 col-sm-12 kt-margin-bottom-20-mobile">
+            <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
               <mat-label class="customMatLabel">Document Loan Type  <strong class="matMandatory">*</strong></mat-label>
               <mat-select formControlName="DocLoanId">
                 <mat-option>
@@ -100,8 +100,8 @@
               <mat-error *ngIf="hasError('ParentDocId', 'required')">Parent Doc Id <strong>required</strong></mat-error>
             </mat-form-field>
           </div>
-          <div class="col-lg-4 kt-margin-bottom-20-mobile">
-            <mat-form-field class="mat-form-field-fluid" appearance="outline">
+          <div class="col-lg-4 col-sm-12 kt-margin-bottom-20-mobile">
+            <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
               <mat-label class="customMatLabel">Documents <strong class="matMandatory">*</strong></mat-label>
               <mat-select formControlName="ParentDocId">
                 <mat-option>
@@ -115,8 +115,8 @@
               <mat-error *ngIf="hasError('ParentDocId', 'required')">Parent Doc Id <strong>required</strong></mat-error>
             </mat-form-field>
           </div>
-          <div class="col-lg-4 kt-margin-bottom-20-mobile">
-            <mat-form-field class="mat-form-field-fluid" appearance="outline">
+          <div class="col-lg-4 col-sm-12 kt-margin-bottom-20-mobile">
+            <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
               <mat-label class="customMatLabel">Document Ref No. <strong class="matMandatory">*</strong></mat-label>
               <input matInput formControlName="DocumentRefNo">
               <mat-error *ngIf="hasError('DocumentRefNo', 'required')">Document Ref No <strong>required</strong></mat-error>
@@ -129,15 +129,15 @@
               <!--<mat-error *ngIf="hasError('ZoneId', 'required')">Zone <strong>required</strong></mat-error>-->
             </mat-form-field>
           </div>
-          <div class="col-lg-4 kt-margin-bottom-20-mobile">
-            <mat-form-field class="mat-form-field-fluid" appearance="outline">
+          <div class="col-lg-4 col-sm-12 kt-margin-bottom-20-mobile">
+            <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
               <mat-label class="customMatLabel">No of Files to Upload<strong class="matMandatory">*</strong></mat-label>
               <input matInput formControlName="NoOfFilesToUpload">
               <mat-error *ngIf="hasError('NoOfFilesToUpload', 'required')">No Of Files To Upload <strong>required</strong></mat-error>
             </mat-form-field>
           </div>
           <div class="col-lg-12 kt-margin-bottom-20-mobile">
-            <mat-form-field class="mat-form-field-fluid" appearance="outline">
+            <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
               <mat-label class="customMatLabel">Description</mat-label>
               <textarea matInput placeholder="Enter Market Price" formControlName="Description"></textarea>
               <mat-error *ngIf="hasError('Description', 'required')">Document Ref No <strong>required</strong></mat-error>
@@ -158,11 +158,11 @@
     <div class="kt-portlet__body">
       <div class="kt-form">
         <div class="form-group kt-form__group row">
-          <div class="col-lg-2 kt-margin-bottom-20-mobile">
+          <div class="col-lg-3 col-sm-12 kt-margin-bottom-20-mobile">
             <input formControlName="file" id="file" type="file" (change)="onFileChange($event)">
           </div>
-          <div class="col-lg-2 kt-margin-bottom-20-mobile">
-            <mat-form-field class="mat-form-field-fluid" appearance="outline">
+          <div class="col-lg-4  col-sm-12 kt-margin-bottom-20-mobile">
+            <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
               <mat-label class="customMatLabel">Page No</mat-label>
               <input matInput formControlName="PageNumber">
             </mat-form-field>
@@ -173,7 +173,7 @@
   </div>
 
   <div class="col-12">
-    <button type="button" class="btn btn-primary" (click)="saveLoanDocuments()">Save</button>
+    <button type="button" class="mat-focus-indicator mat-flat-button mat-button-base mat-primary" (click)="saveLoanDocuments()"><mat-icon class="mr-2">save</mat-icon> Save</button>
   </div>
 
 </form>
